<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="195dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_game_model"
                    android:textSize="12pt" />

                <RadioGroup
                    android:id="@+id/rag_game_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <RadioButton
                        android:id="@+id/rad_multi_fool"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rad_multi_fool"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/rad_multi_ghost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rad_multi_ghost" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="133dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_choose_count"
                    android:textSize="12pt" />

                <Spinner
                    android:id="@+id/sp_people_count"
                    android:layout_width="282dp"
                    android:layout_height="45dp"
                    android:layout_weight="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_farmer_word"
                    android:textSize="12pt" />

                <EditText
                    android:id="@+id/edt_farmer_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_fool_word"
                    android:textSize="12pt" />

                <EditText
                    android:id="@+id/edt_fool_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_shuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_shuffle" />

                <Button
                    android:id="@+id/btn_system_model"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_system_model" />

                <Button
                    android:id="@+id/btn_start_game"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_start_game" />

                <Button
                    android:id="@+id/btn_no_referee"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_no_referee" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="vertical" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>